--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ strong{
 
   <div class="container">
    <div class="card">
-    <img src="images/slgihsfh.WEBP" alt="גרעיני חמניה קרעץ">
+    <img src="images/slgihsfh.jpg" alt="גרעיני חמניה קרעץ">
     <div class="card-content">
       <h3>גרעינים שחורים</h3>
       <p>300 גרם</p>
@@ -118,7 +118,7 @@ strong{
 
 
   <div class="card">
-    <img src="images/fjffyjgyj.WEBP" alt="גומי בקבוק קולה מסוכר">
+    <img src="images/fjffyjgyj.jpg" alt="גומי בקבוק קולה מסוכר">
     <div class="card-content">
       <h3>גומי בקבוק קולה מסוכר</h3>
       <p>300 גרם</p>
@@ -136,7 +136,7 @@ strong{
   </div>
 
   <div class="card">
-    <img src="images/ljdnjgnd.WEBP" alt="חטיף ביסלי בטעם גריל">
+    <img src="images/ljdnjgnd.jpg" alt="חטיף ביסלי בטעם גריל">
     <div class="card-content">
       <h3>חטיף ביסלי בטעם גריל</h3>
       <p>35 גרם</p>
@@ -145,7 +145,7 @@ strong{
   </div>
 
   <div class="card">
-    <img src="images/dhdghfgh.WEBP" alt="חטיף במבה קלאסית">
+    <img src="images/dhdghfgh.jpg" alt="חטיף במבה קלאסית">
     <div class="card-content">
       <h3>חטיף במבה קלאסית</h3>
       <p>80 גרם</p>
@@ -154,7 +154,7 @@ strong{
   </div>
 
   <div class="card">
-    <img src="images/hfjfy.WEBP" alt="חטיף ביסלי מיקס בצל">
+    <img src="images/hfjfy.jpg" alt="חטיף ביסלי מיקס בצל">
     <div class="card-content">
       <h3>חטיף ביסלי מיקס בצל</h3>
       <p>70 גרם</p>
@@ -163,7 +163,7 @@ strong{
   </div>
 
   <div class="card">
-    <img src="images/dfhghgfhg.WEBP" alt="גומי אבטיחים">
+    <img src="images/dfhghgfhg.jpg" alt="גומי אבטיחים">
     <div class="card-content">
       <h3>גומי אבטיחים</h3>
       <p>30 גרם</p>
@@ -172,7 +172,7 @@ strong{
   </div>
 
   <div class="card">
-    <img src="images/dhdhdffdh.WEBP" alt="חמצוצים בטעם קולה">
+    <img src="images/dhdhdffdh.jpg" alt="חמצוצים בטעם קולה">
     <div class="card-content">
       <h3>חמצוצים בטעם קולה</h3>
       <p>50 גרם</p>
@@ -181,7 +181,7 @@ strong{
   </div>
 
   <div class="card">
-    <img src="images/dfhhfghcg.WEBP" alt="לוקיטוס שטיחים חמוצים פירות">
+    <img src="images/dfhhfghcg.jpg" alt="לוקיטוס שטיחים חמוצים פירות">
     <div class="card-content">
       <h3>לוקיטוס שטיחים חמוצים פירות</h3>
       <p>180 גרם</p>
@@ -190,7 +190,7 @@ strong{
   </div>
 
   <div class="card">
-    <img src="images/fgdhfghg.WEBP" alt="שטיחים חמוצים תותי פרוטי">
+    <img src="images/fgdhfghg.jpg" alt="שטיחים חמוצים תותי פרוטי">
     <div class="card-content">
       <h3>שטיחים חמוצים תותי פרוטי</h3>
       <p>180 גרם</p>
@@ -199,7 +199,7 @@ strong{
   </div>
 
   <div class="card">
-    <img src="images/fghfftjgf.WEBP" alt="מרס סניקרס טוויקס באונטי מילקי ווי">
+    <img src="images/fghfftjgf.jpg" alt="מרס סניקרס טוויקס באונטי מילקי ווי">
     <div class="card-content">
       <h3>מרס / סניקרס / טוויקס / באונטי / מילקי ווי</h3>
       <p>יחידה</p>
